誤字及ぼ文字サイズの修正

--- a/data/event.yml
+++ b/data/event.yml
@@ -30,7 +30,7 @@ list:
   - name: Lobelia （ロベリア）
     text: ライブ2013年10月30日に3人で結成されたロックバンド。今年4月にキーボードが新たに加入し現在の4人編成となる。作詞作曲をサイトウユウヤ・義光で担当し、二人の独特な世界観を融合させLobeliaの世界を創り上げる。現在都内を中心に活動中。3ピース時代に発売した「Eclosion」が全国のTOWER RECORDSAmazonで発売中。
 
-  - name: みながら学ぶ自己制御の心理学講義
+  - name: 飲みながら学ぶ自己制御の心理学講義
     sub: 東京未来大学モチベーション行動科学部竹橋洋毅研究室3年 大久保慧悟
     text: 「やせたい！」「お金を貯めたい！」しかし、上手くいかない…。誰しもがある経験。上手く自分の情動や注意を調整して、目標を達成する。そこで心理学の知見は役に立ちます。根性論ではなく、賢く努力する為の方法を一緒に考えてみませんか。
     image: './images/event/大久保.jpg'
