--- a/data/sponsers.yml
+++ b/data/sponsers.yml
@@ -1,7 +1,9 @@
 - name: 株式会社CAN
   url: http://www.cantop.jp/index.php
+  img: images/logo/足立経済新聞.jpg
 - name: CROSS WAVE SENJU
   url: http://senjux.com/crosswavesenju
 - name: 足立経済新聞
   url: http://adachi.keizai.biz/
+  img: images/logo/足立経済新聞.jpg
 
