--- a/data/event.yml
+++ b/data/event.yml
@@ -1,27 +1,27 @@
 - name: マジックサークル
   sub: 東京電機大学東京千住キャンパス千住
   text: 東京電機大学千住マジックサークルです！部員は30名程いて、テーブルマジックや、ジャグリングを練習しております。学生祭以外にも、老人介護施設やお店で、マジックやジャグリングをやって欲しい！というご依頼もお待ちしておりますので、団体名で検索、もしくは、HP：http://smctdu.jimdo.com/をご覧ください！
-  image: './images/event/マジックサークル.jpg'
+  image: '/images/event/マジックサークル.jpg'
 
 - name: DJ同好会"FRENZY.NET"
   sub: 東京電機大学東京千住キャンパス
   text: 初めまして！『学生とクラブシーンを繋ぐ』を目的に学生によるDJという音楽活動を広める活動をしています！普段は練習が中心ですが、学生団体の音楽イベントに協力したり、11月には学園祭でゲストをお呼びした本格DJイベントを開いたりしました。よろしくお願いします！
-  image: './images/event/DJ同好会.jpg'
+  image: '/images/event/DJ同好会.jpg'
 
 - name: BookLink
   sub: 東京未来大学
   text: BookLinkは東京未来大学内での本好きの集団です。活動内容は主にビブリオバトル。要は本のプレゼンです。小説やマンガ、解剖の本など、普通の本からドン引き確定の本まで色々やってます。つまり、冷たい視線も華麗にかわす、殺虫剤にすら耐えうる本の虫の集まりです。
-  image: './images/event/booklink.jpg'
+  image: '/images/event/booklink.jpg'
 
 - name: HI-FIVE　PROJECT
   sub: 獨協大学
   text: TABLE FOR TWO(以下TFT)とは、先進国の肥満と途上国の飢餓の不均衡を正すことを目指すNPOです。TFTが考えるヘルシーメニューを食堂に導入し、それに含まれる20円がアフリカの子供たちの給食一食分として寄付されます。私たちはこの活動に賛同し、TFT大学連合の獨協支部として活動しています。
-  image: './images/event/hi-five-project.jpg'
+  image: '/images/event/hi-five-project.jpg'
 
 - name: 飲みながら学ぶ自己制御の心理学講義
   sub: 東京未来大学モチベーション行動科学部竹橋洋毅研究室3年 大久保慧悟
   text: 「やせたい！」「お金を貯めたい！」しかし、上手くいかない…。誰しもがある経験。上手く自分の情動や注意を調整して、目標を達成する。そこで心理学の知見は役に立ちます。根性論ではなく、賢く努力する為の方法を一緒に考えてみませんか。
-  image: './images/event/大久保.jpg'
+  image: '/images/event/大久保.jpg'
 
 - name: 〜少女漫画に学ぶ！愛のフランス語～講義
   sub: 獨協大学外国語学部フランス語学科3年 小関玲佳
