--- a/data/shop.yml
+++ b/data/shop.yml
@@ -31,7 +31,7 @@
 - url: '#'
   name: cafeしゃべり場
   image: /images/shop/zapot.jpg
-  text: 写真についてパンフレットはokホームページなどに載せるのはＮＧ「たまにはくつろげるカフェに行きたい」	学生と商店街の交流の場！若者たちの居場所作りはできないかという質問からスタートし、学生たちと商店街の地域の方々の接点の場となっています。軽い飲食を共にしながら、いつでも気軽に相談ができる、アットホームな場所を提供しています。
+  text: 学生と商店街の交流の場！若者たちの居場所作りはできないかという質問からスタートし、学生たちと商店街の地域の方々の接点の場となっています。軽い飲食を共にしながら、いつでも気軽に相談ができる、アットホームな場所を提供しています。
 
 - url: '#'
   name: Dining Zapot
