eventの写真追加

--- a/data/event.yml
+++ b/data/event.yml
@@ -30,10 +30,12 @@
 - name: DTM部
   sub:  東京電機大学千葉ニュータウンキャンパス
   text: 私達は普段主にパソコンを使って作曲、編曲をしイベントなどで頒布を行っています！今回の学生祭では「街」をテーマにしたオリジナルCDの販売を考えています！頑張ります！！
+  image: '/images/event/tibaDTM.jpg'
 
 - name: 非公式カラオケ部
   sub: 東京電機大学
   text: なんと私達カラオケ部がCDをリリースします．その名も，"""""GORILLA""""""．凶暴なイメージとは裏腹に温和で繊細なゴリラは，現在，絶滅の危機に瀕しています．そんな彼らを守るために，とかは一切関係なく，なんかCD売って一儲けしようって魂胆です．なんちゃって.
+  image: '/images/event/karaoke.jpg'
 
 - name: Lobelia （ロベリア）
   text: ライブ2013年10月30日に3人で結成されたロックバンド。今年4月にキーボードが新たに加入し現在の4人編成となる。作詞作曲をサイトウユウヤ・義光で担当し、二人の独特な世界観を融合させLobeliaの世界を創り上げる。現在都内を中心に活動中。3ピース時代に発売した「Eclosion」が全国のTOWER RECORDSAmazonで発売中。
