--- a/data/shop.yml
+++ b/data/shop.yml
@@ -1,5 +1,14 @@
 - url: '#'
   image: /images/shop/j'scurry.jpg
+  name: ダミー
+  text: これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。
+  address: ダミー
+  type: ダミー
+  hours: 11:00〜14:30 18:00〜23:00
+  holiday: 月曜日
+
+- url: '#'
+  image: /images/shop/j'scurry.jpg
   name: j'scurry
   text: 「三種類のカレーと無料で選べるトッピングが目玉！」“ニッポンのカレー”をテーマにした黒・赤・黄、三種類の個性の異なるカレーを味わうことができるお店です。カレーだけではなく、無料で日替わりのトッピングを10種類以上の中から選べるのでいつ行っても新しい楽しみ方ができます！ぜひ、一度お越し下さいませ！
 
