--- a/data/shop.yml
+++ b/data/shop.yml
@@ -1,11 +1,11 @@
 - url: '#'
   image: /images/shop/j'scurry.jpg
   name: ダミー
-  text: これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。
+  text: これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。
+  kind: ダミー
   address: ダミー
-  type: ダミー
-  hours: 11:00〜14:30 18:00〜23:00
   holiday: 月曜日
+  hours: "11:00〜14:30 18:00〜23:00"
 
 - url: '#'
   image: /images/shop/j'scurry.jpg
