Fix link to shoppage

--- a/data/shop.yml
+++ b/data/shop.yml
@@ -1,4 +1,4 @@
-- url: '#'
+- url: dummy
   image: /images/shop/j'scurry.jpg
   name: ダミー
   text: これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。これはダミーです。
@@ -8,37 +8,37 @@
   hours: "11:00〜14:30 18:00〜23:00"
   gmap: "https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3238.089608726822!2d139.80608432408138!3d35.74860221618717!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7026ee7b68f19725!2z5YyX5Y2D5L2P6aeF77yI5p2x5Lqs77yJ!5e0!3m2!1sja!2sjp!4v1417768624795"
 
-- url: '#'
+- url: j'scurry
   image: /images/shop/j'scurry.jpg
   name: j'scurry
   text: 「三種類のカレーと無料で選べるトッピングが目玉！」“ニッポンのカレー”をテーマにした黒・赤・黄、三種類の個性の異なるカレーを味わうことができるお店です。カレーだけではなく、無料で日替わりのトッピングを10種類以上の中から選べるのでいつ行っても新しい楽しみ方ができます！ぜひ、一度お越し下さいませ！
 
-- url: '#'
+- url: sakura
   name: レストラン桜
   image: /images/shop/sakura.jpg
   text: 「焼きたてのナンとカレーは絶品」本場仕込みのインド・ネパール料理を味わえるレストランです。カレーがメインメニューで、その辛さは甘口から激辛までの5段階に分かれているので、自分に合った辛さで本格的なカレーを味わうことができます！
 
-- url: '#'
+- url: buruan
   name: ブアールアン
   image: /images/shop/buruan.jpg
   text: 「本物のタイ料理を北千住で味わえます」日本人でも食べやすいタイ料理が味わえるお店です。お米の麺を使ったパッタイやエビのさつま揚げなど本格的なタイ料理を楽しむこともできます。こだわり抜いたスパイスで味付けされた料理はどれも天下一品です！
 
-- url: '#'
+- url: kaeru
   name: 居酒屋かえる
   image: /images/shop/kaeru.jpg
   text: 「不思議オブジェが目印！」可愛らしいカエルたちで飾られた入り口をくぐり抜けると昔ながらの居酒屋さんの雰囲気の店内が出迎えてくれます。鮮度にこだわったお刺身や馬刺しを堪能しながら、ちょっと一杯ゆっくりする、そんなお店です。
 
-- url: '#'
+- url: yanagi
   name: 柳衣装店
   image: /images/shop/yanagi.jpg
   text: 「一生に一度の思い出は、ぜひここで！」七五三から成人式の衣装や華やかな花嫁衣装など、ありとあらゆる衣装を扱っています。また、写真撮影やイベント、フェアなども開催しています。地域に根ざしたサービス提供と共に、衣装を通じてお客様の幸せ作りのお手伝いします。
 
-- url: '#'
+- url: cafesyaberiba
   name: cafeしゃべり場
   image: /images/shop/cafe_syberi.jpg
   text: 学生と商店街の交流の場！若者たちの居場所作りはできないかという質問からスタートし、学生たちと商店街の地域の方々の接点の場となっています。軽い飲食を共にしながら、いつでも気軽に相談ができる、アットホームな場所を提供しています。
 
-- url: '#'
+- url: DiningZapot
   name: Dining Zapot
   image: /images/shop/zapot.jpg
   text: 「神秘的なレストランへようこそ！」北千住でちょっとした自然を味わいながらお食事を楽しめるおしゃれなレストランです。店内のまるで森の中にいるようなデコレーションは女性たちを虜にすること間違いなしです！お店の雰囲気と共に、メニューの充実した美味しいお料理でゆったり気分を味わってみませんか？
