--- a/data/event.yml
+++ b/data/event.yml
@@ -3,6 +3,13 @@
   text: 東京電機大学千住マジックサークルです！部員は30名程いて、テーブルマジックや、ジャグリングを練習しております。学生祭以外にも、老人介護施設やお店で、マジックやジャグリングをやって欲しい！というご依頼もお待ちしておりますので、団体名で検索、もしくは、HP：http://smctdu.jimdo.com/をご覧ください！
   image: '/images/event/マジックサークル.jpg'
   url: dummy
+  content: 東京電機大学千住マジックサークルです！部員は30名程いて、テーブルマジックや、ジャグリングを練習しております。学生祭以外にも、老人介護施設やお店で、マジックやジャグリングをやって欲しい！というご依頼もお待ちしておりますので、団体名で検索、もしくは、HP：http://smctdu.jimdo.com/をご覧ください！
+  schedule:
+    - 1月31日 10:00〜13:00
+    - 1月31日 14:00〜17:00
+  local: Dining Zapot
+  localurl: DiningZapot
+
 
 - name: マジックサークル
   sub: 東京電機大学東京千住キャンパス千住
